@@ -87,6 +87,7 @@ Bugs fixed
 * #8501: autosummary: summary extraction splits text after "el at." unexpectedly
 * #8524: html: Wrong url_root has been generated on a document named "index"
 * #8419: html search: Do not load ``language_data.js`` in non-search pages
+* #8549: i18n: ``-D gettext_compact=0`` is no longer working
 * #8454: graphviz: The layout option for graph and digraph directives don't work
 * #8131: linkcheck: Use GET when HEAD requests cause Too Many Redirects, to
   accommodate infinite redirect loops on HEAD
